--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
 
     <footer>
         <ul class="menufooter">
-            <li><a href="https://www.youtube.com/channel/UCzI7wZyqk7jpXWT_MILjepw" class="letrafooter">Youtube</a></li>
-            <li><a href="https://open.spotify.com/artist/3vQ0GE3mI0dAaxIMYe5g7z?si=PBO2d076Tuig-lK8Dk13WQ"
+            <li class="hoverfooter"><a href="https://www.youtube.com/channel/UCzI7wZyqk7jpXWT_MILjepw" class="letrafooter">Youtube</a></li>
+            <li class="hoverfooter"><a href="https://open.spotify.com/artist/3vQ0GE3mI0dAaxIMYe5g7z?si=PBO2d076Tuig-lK8Dk13WQ"
                     class="letrafooter">Spotify</a></li>
-            <li><a href="https://www.instagram.com/paulolondra/?hl=es" class="letrafooter">Instagram</a></li>
-            <li><a href="https://twitter.com/PauloLondra?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
+            <li class="hoverfooter"><a href="https://www.instagram.com/paulolondra/?hl=es" class="letrafooter">Instagram</a></li>
+            <li class="hoverfooter"><a href="https://twitter.com/PauloLondra?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
                     class="letrafooter">Twitter</a></li>
         </ul>
     </footer>
