--- a/index.html
+++ b/index.html
@@ -6,30 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Principal</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <header>
-        <nav>
-            <ul class="menu">
+        <nav class="row">
+            <ul class="menu col-md-12">
                 <li><a href="index.html" class="letramenu">inicio</a></li>
                 <li><a href="../fanpage-pralong/pages/noticias.html" class="letramenu">noticias</a></li>
                 <li><a href="../fanpage-pralong/pages/galeria.html" class="letramenu">galeria</a></li>
                 <li><a href="../fanpage-pralong/pages/albums.html" class="letramenu">albums</a></li>
             </ul>
+            <h1 id="h1index">Paulo Londra</h1>
         </nav>
     </header>
 
-    <h1 id="h1index">Paulo Londra</h1>
+ 
 
-    <main class="mainindex">
+    <main class="mainindex row">
 
-        <section id="sectionvideo">
+        <section id="sectionvideo" class="col-md-12">
             <video src="./assets/videos/videopaulolondra.mp4" controls id="video">Preparado para el millon</video>
         </section>
        
-        <section class="biografia">
+        <section class="biografia col-md-12">
             <h2 id="Biografia">Biografia</h2>
             <p>Paulo Londra nació en Córdoba, Argentina, el 12 de abril de 1998. Hijo de un padre gendarme, y de una
                 madre
@@ -51,7 +53,7 @@
                 estilo más melódico y técnico. Luego de finalizar el secundario, estudió dos años de derecho en la
                 universidad en pararelo a su hobbie de componer canciones y participar en batallas de rap.</p>
         </section>
-        <section class="carreramusical">
+        <section class="carreramusical col-md-6">
             <h2 id="carrera musical">Carrera artistica</h2>
             <h3 class="subtitulobio">Un buen comienzo</h3>
             <p>Inició su carrera musical en enero de 2017 cuando lanzó su sencillo debut, «Relax», producido por su
@@ -126,7 +128,7 @@
                 tras
                 su conflicto con la discográfica Big Ligas</p>
         </section>
-        <section class="sobreestilo">
+        <section class="sobreestilo col-md-6">
             <h2 id="sobre su estilo">Sobre su estilo</h2>
             <P>El estilo musical de Paulo Londra está basado enteramente en trap latino, pop latino y variaciones de
                 reguetón, pasando por algunas baladas. A pesar de que sus inicios son similares a otros exponentes
@@ -138,7 +140,7 @@
                 Londra.</P>
         </section>
         <section class="vidapriv">
-            <h2 id="vida privada">Vida privada</h2>
+            <h2 id="vida privada col-md-12">Vida privada</h2>
             <P id="ultimop">El 8 de abril de 2020, a través de una publicación de Instagram, a la edad de 21 años,
                 Londra indicó que
                 sería padre junto con su novia Rocío Moreno. El 17 de julio, nació su hija en una clínica de la ciudad
@@ -147,8 +149,8 @@
 
     </main>
 
-    <footer>
-        <ul class="menufooter">
+    <footer class="row">
+        <ul class="menufooter ">
             <li class="hoverfooter"><a href="https://www.youtube.com/channel/UCzI7wZyqk7jpXWT_MILjepw" class="letrafooter">Youtube</a></li>
             <li class="hoverfooter"><a href="https://open.spotify.com/artist/3vQ0GE3mI0dAaxIMYe5g7z?si=PBO2d076Tuig-lK8Dk13WQ"
                     class="letrafooter">Spotify</a></li>
@@ -157,6 +159,7 @@
                     class="letrafooter">Twitter</a></li>
         </ul>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
 </html>
