--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noticias</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
@@ -21,9 +22,9 @@
         </nav>
     </header>
     <h1>Noticias recientes</h1>
-    <main class="mainnoti">
-    
-        <section class="noti1">
+    <main class="mainnoti row">
+        <section class="negro col-md-2"></section>
+        <section class="noti1 col-md-8">
         <img src="../assets/imagenes/noticia 1.png" alt="noticia de denuncia">
         <P>
             Desde que Paulo Londra se separó de la madre de sus dos hijas, Rocío Moreno, no logra resolver los
@@ -40,7 +41,9 @@
             de acuerdo en que es lamentable que no pueda vincularse de igual forma con sus hijas
         </P>
     </section>
-    <section class="noti2">
+    <section class="negro col-md-2"></section>
+    <section class="negro col-md-2"></section>
+    <section class="noti2 col-md-8">
         <img src="../assets/imagenes/noticia 2.png" alt="Separacion de Paulo londra">
         <p>Rocío Moreno rompió el silencio en LAM junto a Ana Rosenfeld y reveló algunos detalles de su separación de
             Paulo Londra, así como también de las circunstancias que rodearon a esa decisión. Por su parte, Paulo Londra
@@ -58,7 +61,10 @@
         <p>« Tenía una nena de un año y cinco meses, estaba embarazada y yo estaba sola en la casa. Si no hubiese sido
             por mis amigos y mi familia, el segundo embarazo lo llevé todo sola».</p>
         </section>
-        <section class="noti3">
+
+        <section class="negro col-md-2"></section>
+        <section class="negro col-md-2"></section>
+        <section class="noti3 col-md-8">
             <img src="../assets/imagenes/noticia 3.png" alt="Paulo londra vuelve a la musica">
         <p>Paulo Londra finalmente volverá a compartir nueva música este miércoles 23 de marzo desde las 19. Después de
             dos años de silencio, la espera terminó y los fanáticos del cantante cordobés podrán disfrutar de uno de los
@@ -76,8 +82,7 @@
             la música este miércoles 23 de marzo a las 19 con Plan A, un tema que sin dudas será una explosión viral,
             gracias al hype que se generó en su ausencia.</p>
         </section>
-    <section class="negro"></section>
-    <section class="negro2"></section>
+    <section class="negro2 col-md-2"></section>
     </main>
 
     <footer>
@@ -90,6 +95,7 @@
                     class="letrafooter">Twitter</a></li>
         </ul>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
 </html>
