--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -82,7 +82,7 @@
             la música este miércoles 23 de marzo a las 19 con Plan A, un tema que sin dudas será una explosión viral,
             gracias al hype que se generó en su ausencia.</p>
         </section>
-    <section class="negro2 col-md-2"></section>
+    <section class="negro col-md-2"></section>
     </main>
 
     <footer>
