--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -31,7 +31,7 @@
             con respecto
             a la situación que afecta a su hija e involucra a sus nietas. Haciendo referencia a que el artista le
             prestaba mucha atención a las opiniones del afuera. Cabe recordar
-            que Rocío Moreno confesó que a la mamá de Paulo Londra no le gustaba que ellos estén juntos. Cuando quedó
+            que Rocío Moreno confesó que a la mama de Paulo Londra no le gustaba que ellos estén juntos. Cuando quedó
             embarazada de su primera hija, Isabella, las cosas cambiaron, ya que solían hacerle comentarios despectivos
             o dando a entender que ella estaba interesada en el dinero que producía el artista con su música, dejando de
             lado que ellos estaban en pareja desde antes de que sus canciones se convirtieran en un éxito absoluto, como
