--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Principal</title>
+    <meta name="description" content="Se trata de la mejor pagina sobre Paulo Londra, uno de los cantantes mas valorados de toda latinoamerica. Donde encontraras informacion sobre el artista, noticias relacionadas, sus albums mas exitosos y mas.">
+    <meta property="keywords" content="Paulo Londra, musica, cantantes, trap, canciones, albums, noticias, biografia, fotos, familia, Big Ligas, bizarrap, freestyle, rap, pop latino, regueton, sencillos">
+    <title>Todo sobre el artista</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-    <header>
-        <nav>
+    <header class="row">
+        <nav class="col-md-12">
             <ul class="menu">
                 <li><a href="index.html" class="letramenu">inicio</a></li>
                 <li><a href="../fanpage-pralong/pages/noticias.html" class="letramenu">noticias</a></li>
@@ -20,9 +22,9 @@
                 <li><a href="../fanpage-pralong/pages/albums.html" class="letramenu">albums</a></li>
             </ul>
         </nav>
+        <h1 id="h1index">Paulo Londra</h1>
     </header>
 
-    <h1 id="h1index">Paulo Londra</h1>
 
     <main class="mainindex row">
 
@@ -148,8 +150,8 @@
 
     </main>
 
-    <footer>
-        <ul class="menufooter">
+    <footer class="row">
+        <ul class="menufooter col-md-12">
             <li class="hoverfooter"><a href="https://www.youtube.com/channel/UCzI7wZyqk7jpXWT_MILjepw" class="letrafooter">Youtube</a></li>
             <li class="hoverfooter"><a href="https://open.spotify.com/artist/3vQ0GE3mI0dAaxIMYe5g7z?si=PBO2d076Tuig-lK8Dk13WQ"
                     class="letrafooter">Spotify</a></li>
