--- a/pages/albums.html
+++ b/pages/albums.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Albums</title>
+    <meta name="description" content="Se trata de la mejor pagina sobre Paulo Londra, uno de los cantantes mas valorados de toda latinoamerica. Donde encontraras informacion sobre el artista, noticias relacionadas, sus albums mas exitosos y mas.">
+    <meta property="keywords" content="Paulo Londra, musica, cantantes, trap, canciones, albums, noticias, biografia, fotos, familia, Big Ligas, bizarrap, freestyle, rap, pop latino, regueton, sencillos">
+    <title>Los mejores exitos del cantante</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
@@ -19,8 +21,9 @@
                 <li><a href="albums.html" class="letramenu">albums</a></li>
             </ul>
         </nav>
+        <h1> Sobre sus canciones</h1>
     </header>
-    <h1> Sobre sus canciones</h1>
+
     <main class="mainalbum">
         <section class="section1">
             <h2 class="mayoresexitos">Mayores exitos:</h2>
