--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galeria</title>
+    <meta name="description" content="Se trata de la mejor pagina sobre Paulo Londra, uno de los cantantes mas valorados de toda latinoamerica. Donde encontraras informacion sobre el artista, noticias relacionadas, sus albums mas exitosos y mas.">
+    <meta property="keywords" content="Paulo Londra, musica, cantantes, trap, canciones, albums, noticias, biografia, fotos, familia, Big Ligas, bizarrap, freestyle, rap, pop latino, regueton, sencillos">
+    <title>Distintas tomas sobre el cantante</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
@@ -19,8 +21,9 @@
                 <li><a href="albums.html" class="letramenu">albums</a></li>
             </ul>
         </nav>
+        
     </header>
-
+    
     <main class="maingaleria">
         <h1>Fotos sobre Paulo Londra</h1>
         <h2 class="titulogal">Sobre su familia</h2>
