--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Noticias</title>
+    <meta name="description" content="Se trata de la mejor pagina sobre Paulo Londra, uno de los cantantes mas valorados de toda latinoamerica. Donde encontraras informacion sobre el artista, noticias relacionadas, sus albums mas exitosos y mas.">
+    <meta property="keywords" content="Paulo Londra, musica, cantantes, trap, canciones, albums, noticias, biografia, fotos, familia, Big Ligas, bizarrap, freestyle, rap, pop latino, regueton, sencillos">
+    <title>Todas las novedades sobre Paulo Londra</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -20,8 +22,9 @@
                 <li><a href="albums.html" class="letramenu">albums</a></li>
             </ul>
         </nav>
+        <h1>Noticias recientes</h1>
     </header>
-    <h1>Noticias recientes</h1>
+
     <main class="mainnoti row">
         <section class="negro col-md-2"></section>
         <section class="noti1 col-md-8">
