--- a/pages/albums.html
+++ b/pages/albums.html
@@ -12,13 +12,13 @@
 </head>
 
 <body>
-    <header>
+    <header class="row">
         <nav>
             <ul class="menu">
-                <li><a href="../index.html" class="letramenu">inicio</a></li>
-                <li><a href="noticias.html" class="letramenu">noticias</a></li>
-                <li><a href="galeria.html" class="letramenu">galeria</a></li>
-                <li><a href="albums.html" class="letramenu">albums</a></li>
+                <li><a href="../index.html" class="letramenu col-md-3">inicio</a></li>
+                <li><a href="./noticias.html" class="letramenu col-md-3">noticias</a></li>
+                <li><a href="./galeria.html" class="letramenu col-md-3">galeria</a></li>
+                <li><a href="./albums.html" class="letramenu col-md-3">albums</a></li>
             </ul>
         </nav>
         <h1> Sobre sus canciones</h1>
@@ -83,12 +83,12 @@
 
     <footer>
         <ul class="menufooter">
-            <li class="hoverfooter"><a href="https://www.youtube.com/channel/UCzI7wZyqk7jpXWT_MILjepw" class="letrafooter">Youtube</a></li>
+            <li class="hoverfooter"><a href="https://www.youtube.com/channel/UCzI7wZyqk7jpXWT_MILjepw" class="letrafooter" target="_blank">Youtube</a></li>
             <li class="hoverfooter"><a href="https://open.spotify.com/artist/3vQ0GE3mI0dAaxIMYe5g7z?si=PBO2d076Tuig-lK8Dk13WQ"
-                    class="letrafooter">Spotify</a></li>
-            <li class="hoverfooter"><a href="https://www.instagram.com/paulolondra/?hl=es" class="letrafooter">Instagram</a></li>
+                    class="letrafooter" target="_blank">Spotify</a></li>
+            <li class="hoverfooter"><a href="https://www.instagram.com/paulolondra/?hl=es" class="letrafooter" target="_blank">Instagram</a></li>
             <li class="hoverfooter"><a href="https://twitter.com/PauloLondra?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
-                    class="letrafooter">Twitter</a></li>
+                    class="letrafooter" target="_blank">Twitter</a></li>
         </ul>
     </footer>
 </body>
