--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="row">
         <nav>
             <ul class="menu">
                 <li><a href="../index.html" class="letramenu col-md-3">inicio</a></li>
@@ -28,13 +28,13 @@
         <h1>Fotos sobre Paulo Londra</h1>
         <h2 class="titulogal">Sobre su familia</h2>
         <section class="familiaft1">
-            <img src="../assets/imagenes/familia.jpg" alt="Paulo con su hija y esposa">
-            <img src="../assets/imagenes/bebe2.jpg" alt="Paulo con su hija recien nacida">
-            <img src="../assets/imagenes/familia2.jpg" alt="Paulo con su hija y su expareja">
+                <img src="../assets/imagenes/familia.jpg" alt="Paulo con su hija y esposa" >
+                <img src="../assets/imagenes/bebe2.jpg" alt="Paulo con su hija recien nacida" >
+            <img src="../assets/imagenes/familia2.jpg" alt="Paulo con su hija y su expareja" >
         </section>
             <section class="familiaft2">
-            <img src="../assets/imagenes/bebe3.jpg" alt="La hija de paulo">
-            <img src="../assets/imagenes/familiapaulo.jpg" alt="La familia de paulo londra">
+           <img src="../assets/imagenes/bebe3.jpg" alt="La hija de paulo">
+           <img src="../assets/imagenes/familiapaulo.jpg" alt="La familia de paulo londra">
         </section>
         <h2 class="titulogal">Otras tomas del artista</h2>
         <section class="artistaft1">
@@ -61,6 +61,7 @@
                     class="letrafooter" target="_blank">Twitter</a></li>
         </ul>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
 </html>
