--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="row">
         <nav>
             <ul class="menu">
                 <li><a href="../index.html" class="letramenu col-md-3">inicio</a></li>
