--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -24,12 +24,12 @@
         
     </header>
     
-    <main class="maingaleria">
+    <main class="maingaleria row">
         <h1>Fotos sobre Paulo Londra</h1>
         <h2 class="titulogal">Sobre su familia</h2>
-        <section class="familiaft1">
-                <img src="../assets/imagenes/familia.jpg" alt="Paulo con su hija y esposa" >
-                <img src="../assets/imagenes/bebe2.jpg" alt="Paulo con su hija recien nacida" >
+        <section class="familiaft1 ">
+                <img src="../assets/imagenes/familia.jpg" alt="Paulo con su hija y esposa">
+                <img src="../assets/imagenes/bebe2.jpg" alt="Paulo con su hija recien nacida">
             <img src="../assets/imagenes/familia2.jpg" alt="Paulo con su hija y su expareja" >
         </section>
             <section class="familiaft2">
