--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -5,14 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Se trata de la mejor pagina sobre Paulo Londra, uno de los cantantes mas valorados de toda latinoamerica. Donde encontraras informacion sobre el artista, noticias relacionadas, sus albums mas exitosos y mas.">
-    <meta property="keywords" content="Paulo Londra, musica, cantantes, trap, canciones, albums, noticias, biografia, fotos, familia, Big Ligas, bizarrap, freestyle, rap, pop latino, regueton, sencillos">
+    <meta name="description"
+        content="Se trata de la mejor pagina sobre Paulo Londra, uno de los cantantes mas valorados de toda latinoamerica. Donde encontraras informacion sobre el artista, noticias relacionadas, sus albums mas exitosos y mas.">
+    <meta property="keywords"
+        content="Paulo Londra, musica, cantantes, trap, canciones, albums, noticias, biografia, fotos, familia, Big Ligas, bizarrap, freestyle, rap, pop latino, regueton, sencillos">
     <title>Distintas tomas sobre el cantante</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
-    <header>
+    <header class="row">
         <nav>
             <ul class="menu">
                 <li><a href="../index.html" class="letramenu col-md-3">inicio</a></li>
@@ -21,9 +23,9 @@
                 <li><a href="./albums.html" class="letramenu col-md-3">albums</a></li>
             </ul>
         </nav>
-        
+
     </header>
-    
+
     <main class="maingaleria">
         <h1>Fotos sobre Paulo Londra</h1>
         <h2 class="titulogal">Sobre su familia</h2>
@@ -32,7 +34,7 @@
             <img src="../assets/imagenes/bebe2.jpg" alt="Paulo con su hija recien nacida">
             <img src="../assets/imagenes/familia2.jpg" alt="Paulo con su hija y su expareja">
         </section>
-            <section class="familiaft2">
+        <section class="familiaft2">
             <img src="../assets/imagenes/bebe3.jpg" alt="La hija de paulo">
             <img src="../assets/imagenes/familiapaulo.jpg" alt="La familia de paulo londra">
         </section>
@@ -53,14 +55,19 @@
 
     <footer>
         <ul class="menufooter">
-            <li class="hoverfooter"><a href="https://www.youtube.com/channel/UCzI7wZyqk7jpXWT_MILjepw" class="letrafooter" target="_blank">Youtube</a></li>
-            <li class="hoverfooter"><a href="https://open.spotify.com/artist/3vQ0GE3mI0dAaxIMYe5g7z?si=PBO2d076Tuig-lK8Dk13WQ"
+            <li class="hoverfooter"><a href="https://www.youtube.com/channel/UCzI7wZyqk7jpXWT_MILjepw"
+                    class="letrafooter" target="_blank">Youtube</a></li>
+            <li class="hoverfooter"><a
+                    href="https://open.spotify.com/artist/3vQ0GE3mI0dAaxIMYe5g7z?si=PBO2d076Tuig-lK8Dk13WQ"
                     class="letrafooter" target="_blank">Spotify</a></li>
-            <li class="hoverfooter"><a href="https://www.instagram.com/paulolondra/?hl=es" class="letrafooter" target="_blank">Instagram</a></li>
-            <li class="hoverfooter"><a href="https://twitter.com/PauloLondra?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
+            <li class="hoverfooter"><a href="https://www.instagram.com/paulolondra/?hl=es" class="letrafooter"
+                    target="_blank">Instagram</a></li>
+            <li class="hoverfooter"><a
+                    href="https://twitter.com/PauloLondra?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
                     class="letrafooter" target="_blank">Twitter</a></li>
         </ul>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
 </html>
