--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
-<body>
-    <header>
+<body class="bodynoti">
+    <header class="row">
         <nav>
             <ul class="menu">
                 <li><a href="../index.html" class="letramenu col-md-3">inicio</a></li>
